--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,24 +18,72 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
-        *{
+        * {
             font-family: "Manrope", sans-serif;
         }
     </style>
 </head>
+
 <body>
     <!-- banner section -->
-     <section class="flex border">
-        <div class="banner-left">
-            <h2>It's good
-            tea time at The Tea House</h2>
-            <p>Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-            <button>Explore More</button>
+    <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto mt-[30px]">
+        <div class="banner-left  space-y-[30px] ">
+            <h2 class="text-[5rem] font-extrabold">It's good <br>
+                tea time at The <br> Tea House</h2>
+            <p class="text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste
+                Buds.</p>
+            <button class=" py-3 px-6 rounded-lg text-white bg-linear-to-r from-[#FF8938] to-[#FF0000]">Explore More
+                <span class="inline-block -rotate-45 "><i class="fa-solid fa-arrow-right"></i></span>
+            </button>
         </div>
-        <div class="banner-right">
-            <img src="./images/banner.png" alt="">
+        <div class="banner-right  flex justify-end items-end relative ">
+            <img src="./images/banner.png" alt="" class="">
+            <!-- rating div -->
+            <div
+                class="bg-white rounded-xl shadow-2xl flex gap-1 justify-center items-center absolute bottom-[10px] left-[80px] w-[245px] px-[auto] py-[20px] ">
+                <img src="./images/Group 7.png" alt="" class="">
+                <div class="ml-2">
+                    <h2 class="font-bold text-3xl ">5.00</h2>
+                    <p class="text-[#777777]">Trust Pilot Rating</p>
+                </div>
+            </div>
         </div>
-     </section>
-    
+    </section>
+
+    <!-- feature section -->
+    <section class=" container mx-auto my-[70px]">
+        <div class="max-w-[68%] text-center mx-auto  mb-12">
+            <h2 class="font-extrabold text-[2.8rem] text-center">Our Featured Products</h2>
+            <p class="text-[#777777]">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                by injected humour, or randomised words which don't look even slightly believable.
+            </p>
+        </div>
+
+        <!-- feature card -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+            <div class="bg-linear-to-b from-[#F4F4F4] to-[#F4F4F4] p-7 text-center rounded-xl mx-4">
+                <img src="./images/tea-1.png" alt="" class="mx-auto mb-4">
+                <h2 class="font-extrabold text-[1.5rem]">Milk Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="bg-linear-to-b from-[#F4F4F4] to-[#F4F4F4] p-7 text-center rounded-xl mx-4">
+                <img src="./images/tea-2.png" alt="" class="mx-auto mb-4">
+                <h2 class="font-extrabold text-[1.5rem]">Black Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="bg-linear-to-b from-[#F4F4F4] to-[#F4F4F4] p-7 text-center rounded-xl mx-4">
+                <img src="./images/tea-3.png" alt="" class="mx-auto mb-4">
+                <h2 class="font-extrabold text-[1.5rem]">Lemon Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="bg-linear-to-b from-[#F4F4F4] to-[#F4F4F4] p-7 text-center rounded-xl mx-4">
+                <img src="./images/tea-4.png" alt="" class="mx-auto mb-4">
+                <h2 class="font-extrabold text-[1.5rem]">Green Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
