great tea section is created

--- a/index.html
+++ b/index.html
@@ -62,27 +62,53 @@
 
         <!-- feature card -->
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-            <div class="bg-linear-to-b from-[#F4F4F4] to-[#F4F4F4] p-7 text-center rounded-xl mx-4">
+            <div class="bg-linear-to-b from-[#F4F4F4] to-[#F4F4F400] p-7 text-center rounded-xl mx-4">
                 <img src="./images/tea-1.png" alt="" class="mx-auto mb-4">
                 <h2 class="font-extrabold text-[1.5rem]">Milk Tea</h2>
                 <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
             </div>
-            <div class="bg-linear-to-b from-[#F4F4F4] to-[#F4F4F4] p-7 text-center rounded-xl mx-4">
+            <div class="bg-linear-to-b from-[#F4F4F4] to-[#F4F4F400] p-7 text-center rounded-xl mx-4">
                 <img src="./images/tea-2.png" alt="" class="mx-auto mb-4">
                 <h2 class="font-extrabold text-[1.5rem]">Black Tea</h2>
                 <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
             </div>
-            <div class="bg-linear-to-b from-[#F4F4F4] to-[#F4F4F4] p-7 text-center rounded-xl mx-4">
+            <div class="bg-linear-to-b from-[#F4F4F4] to-[#F4F4F400] p-7 text-center rounded-xl mx-4">
                 <img src="./images/tea-3.png" alt="" class="mx-auto mb-4">
                 <h2 class="font-extrabold text-[1.5rem]">Lemon Tea</h2>
                 <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
             </div>
-            <div class="bg-linear-to-b from-[#F4F4F4] to-[#F4F4F4] p-7 text-center rounded-xl mx-4">
+            <div class="bg-linear-to-b from-[#F4F4F4] to-[#F4F4F400] p-7 text-center rounded-xl mx-4">
                 <img src="./images/tea-4.png" alt="" class="mx-auto mb-4">
                 <h2 class="font-extrabold text-[1.5rem]">Green Tea</h2>
                 <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
             </div>
         </div>
+    </section>
+
+    <!-- great tea section -->
+    <section class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 my-[120px] ">
+        <div class="great-tea-left  grid grid-cols-2 grid-rows-3 gap-7">
+            <div class=" row-span-1 bg-linear-to-r from-[#FF0000] to-[#FF8938] opacity-10 rounded-2xl "></div>
+            <div class=" row-span-2 flex justify-center items-center bg-[#E6A6231A] py-10 rounded-2xl ">
+                <img src="./images/fresh-1.png" alt="">
+            </div>
+            <div class=" row-span-2 flex justify-center items-center bg-[#5776391A] py-10 rounded-2xl ">
+                <img src="./images/fresh-2.png" alt="">
+            </div>
+            <div class=" row-span-1 bg-linear-to-r from-[#D9D9D9] to-[#FFFFFF] rounded-2xl "></div>
+
+        </div>
+        <div class="great-tea-right space-y-5">
+            <h2 class="font-extrabold text-[2.8rem]">Great Tea, Freshly <br> Presented</h2>
+            <p class="text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the
+            highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers because
+            of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <h2 class=" font-extrabold text-[1.25rem]">Unique Taste</h2>
+            <p class="text-[#777777]">A Unique and different style from other teapots gives a <br> luxurious and minimalist impression</p>
+            <h2 class=" font-extrabold text-[1.25rem]">Premium Quality</h2>
+            <p class="text-[#777777]">Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
+        </div>
+
     </section>
 
 </body>
