--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 
-<body>
+<body class="m-2">
     <!-- banner section -->
     <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto mt-[30px]">
         <div class="banner-left  space-y-[30px] ">
@@ -32,7 +32,9 @@
                 tea time at The <br> Tea House</h2>
             <p class="text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste
                 Buds.</p>
-            <button class=" py-3 px-6 rounded-lg text-white bg-linear-to-r from-[#FF8938] to-[#FF0000]">Explore More
+            <button
+                class=" py-3 px-6 rounded-lg font-bold text-white bg-linear-to-r from-[#FF8938] to-[#FF0000]">Explore
+                More
                 <span class="inline-block -rotate-45 "><i class="fa-solid fa-arrow-right"></i></span>
             </button>
         </div>
@@ -55,7 +57,8 @@
         <div class="max-w-[68%] text-center mx-auto  mb-12">
             <h2 class="font-extrabold text-[2.8rem] text-center">Our Featured Products</h2>
             <p class="text-[#777777]">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration in some form,
                 by injected humour, or randomised words which don't look even slightly believable.
             </p>
         </div>
@@ -100,16 +103,112 @@
         </div>
         <div class="great-tea-right space-y-5">
             <h2 class="font-extrabold text-[2.8rem]">Great Tea, Freshly <br> Presented</h2>
-            <p class="text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the
-            highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers because
-            of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <p class="text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all
+                possessions . It represents the
+                highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its
+                custoers because
+                of good words of mouth and unique customized service orginated from Taiwan.</p>
             <h2 class=" font-extrabold text-[1.25rem]">Unique Taste</h2>
-            <p class="text-[#777777]">A Unique and different style from other teapots gives a <br> luxurious and minimalist impression</p>
+            <p class="text-[#777777]">A Unique and different style from other teapots gives a <br> luxurious and
+                minimalist impression</p>
             <h2 class=" font-extrabold text-[1.25rem]">Premium Quality</h2>
-            <p class="text-[#777777]">Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
+            <p class="text-[#777777]">Premium Quality that makes tea more elegant and more <br> durable when you use it.
+            </p>
         </div>
 
     </section>
 
+    <!-- meet our client section -->
+    <section
+        class="container mx-auto grid grid-cols-1 lg:grid-cols-2 gap-12 my-[100px] bg-linear-to-r from-[#FF8938] to-[#FF0000] px-[70px] py-20 rounded-xl">
+        <div class="meet-client-left  space-y-5 relative mt-16 ">
+            <h2 class="font-extrabold text-[2.85rem] text-white">Meet Our Super <br> Clients</h2>
+            <p class="text-[#F4F4F4]">There are many variations of passages of Lorem Ipsum <br> available, but the
+                majority have suffered alteration in some <br> form,
+                by injected humour, or randomised words which don't <br> look even slightly believable.</p>
+            <button class="py-3 px-6 rounded-lg bg-white font-bold">
+                <span class="bg-linear-to-r from-[#FF8939] to-[#FF0000] bg-clip-text text-transparent">
+                    Show All
+                </span>
+            </button>
+            <img src="./images/bg_cup.png" alt="" class="absolute top-[170px] right-[150px]">
+        </div>
+        <div class="meet-client-right  relative md:ml-[100px] ">
+            <!-- review card -->
+            <div
+                class=" bg-white rounded-lg p-10 w-3xs sm:w-[433px] absolute top-[100px] left-0 md:absolute left-[-150px] top-[140px] z-50">
+                <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people
+                    who are interested to treatment</p>
+                <h2 class=" font-bold mt-7">Ilham Yuda</h2>
+                <p class="text-[#5D5A6F] font-semibold">Businessman</p>
+                <div class="absolute top-[-30px] left-[-30px] bg-white p-2 rounded-full">
+                    <img src="./images/client.png" alt="">
+                </div>
+                <img src="./images/circles.png" alt="" class=" absolute bottom-5 right-5 ">
+            </div>
+            <div class=" bg-white rounded-lg p-10  sm:w-[433px] relative mb-[50px] opacity-30 ">
+                <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people
+                    who are interested to treatment</p>
+                <h2 class=" font-bold mt-7">Ilham Yuda</h2>
+                <p class="text-[#5D5A6F] font-semibold">Businessman</p>
+                <div class="absolute top-[-30px] left-[-30px] bg-white p-2 rounded-full">
+                    <img src="./images/client.png" alt="">
+                </div>
+                <!-- <img src="./images/circles.png" alt="" class=" absolute bottom-5 right-5 "> -->
+            </div>
+            <div class=" bg-white rounded-lg p-10  sm:w-[433px] relative  opacity-30 ">
+                <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people
+                    who are interested to treatment</p>
+                <h2 class=" font-bold mt-7">Ilham Yuda</h2>
+                <p class="text-[#5D5A6F] font-semibold">Businessman</p>
+                <div class="absolute top-[-30px] left-[-30px] bg-white p-2 rounded-full">
+                    <img src="./images/client.png" alt="">
+                </div>
+                <!-- <img src="./images/circles.png" alt="" class=" absolute bottom-5 right-5 "> -->
+            </div>
+        </div>
+
+    </section>
+
+    <!-- news and event section -->
+    <section class=" container mx-auto ">
+        <div class="text-center mx-28 mb-12 ">
+            <h2 class="font-extrabold text-[2.8rem]">News & Events</h2>
+            <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered  alteration
+            in some form, <br>
+            by injected humour, or randomised words which don't look even slightly believable.</p>
+        </div>
+        <div class="flex justify-center items-center gap-6">
+            <div class="space-y-2.5 p-8 border-2 border-[#D2D2D2] rounded-xl">
+                <img src="./images/news-1.png" alt="">
+                <p class="text-[#777777]">Feb 05, 2027</p>
+                <h2 class="font-extrabold text-[20px]">Collecting 8 points for <br> discount</h2>
+                <p class="text-[#777777]">There are many variations of passages of <br> Lorem Ipsum available.</p>
+                <h2 class="font-bold text-[16px]">Learn More</h2>
+            </div>
+            <div class="space-y-2.5 p-8 border-2 border-[#D2D2D2] rounded-xl">
+                <img src="./images/news-2.png" alt="">
+                <p class="text-[#777777]">Feb 05, 2027</p>
+                <h2 class="font-extrabold text-[20px]">Collecting 8 points for <br> discount</h2>
+                <p class="text-[#777777]">There are many variations of passages of <br> Lorem Ipsum available.</p>
+                <h2 class="font-bold text-[16px]">Learn More</h2>
+            </div>
+            <div class="space-y-2.5 p-8 border-2 border-[#D2D2D2] rounded-xl">
+                <img src="./images/news-3.png" alt="">
+                <p class="text-[#777777]">Feb 05, 2027</p>
+                <h2 class="font-extrabold text-[20px]">Collecting 8 points for <br> discount</h2>
+                <p class="text-[#777777]">There are many variations of passages of <br> Lorem Ipsum available.</p>
+                <h2 class="font-bold text-[16px]">Learn More</h2>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- footer section -->
+     <section class="container mx-auto my-24">
+
+     </section>
+
 </body>
+
 </html>
