--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="meet-client-right  relative md:ml-[100px] ">
             <!-- review card -->
             <div
-                class=" bg-white rounded-lg p-10 w-3xs sm:w-[433px] absolute top-[100px] left-0 md:absolute left-[-150px] top-[140px] z-50">
+                class=" bg-white rounded-lg p-10 w-3xs sm:w-[433px] absolute top-24 left-[20px] md:absolute left-[-150px] top-[140px] z-50">
                 <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people
                     who are interested to treatment</p>
                 <h2 class=" font-bold mt-7">Ilham Yuda</h2>
@@ -171,43 +171,99 @@
     </section>
 
     <!-- news and event section -->
-    <section class=" container mx-auto ">
-        <div class="text-center mx-28 mb-12 ">
-            <h2 class="font-extrabold text-[2.8rem]">News & Events</h2>
-            <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered  alteration
-            in some form, <br>
-            by injected humour, or randomised words which don't look even slightly believable.</p>
-        </div>
-        <div class="flex justify-center items-center gap-6">
-            <div class="space-y-2.5 p-8 border-2 border-[#D2D2D2] rounded-xl">
-                <img src="./images/news-1.png" alt="">
-                <p class="text-[#777777]">Feb 05, 2027</p>
-                <h2 class="font-extrabold text-[20px]">Collecting 8 points for <br> discount</h2>
-                <p class="text-[#777777]">There are many variations of passages of <br> Lorem Ipsum available.</p>
-                <h2 class="font-bold text-[16px]">Learn More</h2>
+    <section class=" container mx-auto bg-linear-to-r from-[#FF8938] to-[#FF0000] p-2 rounded-xl ">
+        <div class="bg-white p-5 rounded-xl">
+            <div class="text-center mx-28 mb-12  ">
+                <h2 class="font-extrabold text-[2.8rem]">News & Events</h2>
+                <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have
+                    suffered alteration
+                    in some form, <br>
+                    by injected humour, or randomised words which don't look even slightly believable.</p>
             </div>
-            <div class="space-y-2.5 p-8 border-2 border-[#D2D2D2] rounded-xl">
-                <img src="./images/news-2.png" alt="">
-                <p class="text-[#777777]">Feb 05, 2027</p>
-                <h2 class="font-extrabold text-[20px]">Collecting 8 points for <br> discount</h2>
-                <p class="text-[#777777]">There are many variations of passages of <br> Lorem Ipsum available.</p>
-                <h2 class="font-bold text-[16px]">Learn More</h2>
-            </div>
-            <div class="space-y-2.5 p-8 border-2 border-[#D2D2D2] rounded-xl">
-                <img src="./images/news-3.png" alt="">
-                <p class="text-[#777777]">Feb 05, 2027</p>
-                <h2 class="font-extrabold text-[20px]">Collecting 8 points for <br> discount</h2>
-                <p class="text-[#777777]">There are many variations of passages of <br> Lorem Ipsum available.</p>
-                <h2 class="font-bold text-[16px]">Learn More</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                <div class="space-y-2.5 p-8 border-2 border-[#D2D2D2] rounded-xl">
+                    <img src="./images/news-1.png" alt="">
+                    <p class="text-[#777777]">Feb 05, 2027</p>
+                    <h2 class="font-extrabold text-[20px]">Collecting 8 points for <br> discount</h2>
+                    <p class="text-[#777777]">There are many variations of passages of <br> Lorem Ipsum available.</p>
+                    <h2 class="font-bold text-[16px]">Learn More</h2>
+                </div>
+                <div class="space-y-2.5 p-8 border-2 border-[#D2D2D2] rounded-xl">
+                    <img src="./images/news-2.png" alt="">
+                    <p class="text-[#777777]">Feb 05, 2027</p>
+                    <h2 class="font-extrabold text-[20px]">Collecting 8 points for <br> discount</h2>
+                    <p class="text-[#777777]">There are many variations of passages of <br> Lorem Ipsum available.</p>
+                    <h2 class="font-bold text-[16px]">Learn More</h2>
+                </div>
+                <div class="space-y-2.5 p-8 border-2 border-[#D2D2D2] rounded-xl">
+                    <img src="./images/news-3.png" alt="">
+                    <p class="text-[#777777]">Feb 05, 2027</p>
+                    <h2 class="font-extrabold text-[20px]">Collecting 8 points for <br> discount</h2>
+                    <p class="text-[#777777]">There are many variations of passages of <br> Lorem Ipsum available.</p>
+                    <h2 class="font-bold text-[16px]">Learn More</h2>
+                </div>
             </div>
         </div>
 
     </section>
 
     <!-- footer section -->
-     <section class="container mx-auto my-24">
+    <section class=" bg-[#ffefe9] px-14 rounded-2xl mt-28 ">
+        <footer class="container mx-auto my-[70px]  ">
+            <!-- footer-top -->
+            <div class=" md:flex justify-between py-24">
+                <img src="./images/cup.png" alt="" class="pb-5 md:pb-0 ">
+                <div class=" flex justify-center items-center gap-10 ">
+                    <p class="text-[#494949] text-[1.25rem]">Ready to get strated?</p>
+                    <button
+                        class=" py-3 px-6 rounded-lg font-bold text-white bg-linear-to-r from-[#FF8938] to-[#FF0000]">Get
+                        Started</button>
+                </div>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-4">
+                <div class="">
+                    <h2 class="font-semibold text-[1.25rem] my-5 ">Quick Links</h2>
+                    <ul class="text-[#494949] space-y-4">
+                        <li>Home</li>
+                        <li>About Us</li>
+                        <li>Insurance</li>
+                        <li>Privacy Policy</li>
+                    </ul>
+                </div>
+                <div class="">
+                    <h2 class="font-semibold text-[1.25rem] my-5">Our Service</h2>
+                    <ul class="text-[#494949] space-y-4">
+                        <li>Life Insurance</li>
+                        <li>Car Insurance</li>
+                        <li>Health Insurance</li>
+                        <li>House Insurance</li>
+                    </ul>
+                </div>
+                <div class="">
+                    <h2 class="font-semibold text-[1.25rem] my-5 ">Help</h2>
+                    <ul class="text-[#494949] space-y-4">
+                        <li>FAQs</li>
+                        <li>Contact Us</li>
+                    </ul>
+                </div class="">
+                <div class="">
+                    <h2 class="font-semibold text-[1.25rem] my-5">Subscribe to our <br> newsletter</h2>
+                    <div class="flex justify-between items-center border-b-2 border-gray-400  py-3">
+                        <p class="text-[#494949]">Email address</p>
+                        <div class="bg-linear-to-r from-[#FF8938] to-[#FF0000] w-9 h-9 rounded-full">
+                            <p class="text-center text-white text-2xl">></p>
+                        </div>
+                    </div>
+                    <img src="./images/Group 3983.png" alt="" class="py-20">
 
-     </section>
+                </div>
+            </div>
+            <div class=" border-green-500 text-center pb-25 text-[#494949]">
+                <p><small>© 2027 UIDesign.to - All rights reserved.</small></p>
+            </div>
+        </footer>
+    </section>
 
 </body>
 
