--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
             </button>
             <img src="./images/bg_cup.png" alt="" class="absolute top-[170px] right-[150px]">
         </div>
-        <div class="meet-client-right  relative md:ml-[100px] ">
+        <div class="meet-client-right  relative md:ml-[100px]  ">
             <!-- review card -->
             <div
-                class=" bg-white rounded-lg p-10 w-3xs sm:w-[433px] absolute top-24 left-[20px] md:absolute left-[-150px] top-[140px] z-50">
+                class=" bg-white rounded-lg p-10 w-3xs sm:w-[433px]  md:absolute right-[200px] top-[140px] z-50">
                 <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people
                     who are interested to treatment</p>
                 <h2 class=" font-bold mt-7">Ilham Yuda</h2>
